--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Rocketshoes</title>
+    <title>Sergio's Shoes Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
